refactor(agent): 重构服务器配置和连接管理
- 移除 WebSocket 协议支持，仅保留 gRPC
- 更新 ServerConfig 结构使用 host/port 替代 URL
- 添加 tls_enabled 配置选项
- 移除 Protocol 枚举和相关自动检测逻辑
- 简化 gRPC 连接管理器实现
- 更新命令行参数解析使用 host/port
- 修改默认端口为 39100 用于 gRPC 连接
- 移除嵌入式仪表板功能
- 更新配置文件示例和验证逻辑
- 调整 Java SDK 的 HTTP 请求处理器移除仪表板支持
- 优化 Java 模型类代码格式和结构